# chip-8-emulator

./: .gitignore  Cargo.toml  Readme.md
desktop/: Cargo.toml
desktop/src/: main.rs
examples/load_rom/: main.rs
examples/shr/: main.rs
src/: cpu.rs
web-wasm/: Cargo.toml  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
web-wasm/src/: lib.rs
